--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+  min-width: 315px;
   background-color: #222222;
   color: white;
   font-weight: bold;
@@ -21,10 +22,6 @@ h1, h3 {
   padding: 5px;
 }
 
-#userWeight {
-  margin-top: 25px;
-}
-
 .userInput:focus {
   outline: none;
 }
@@ -35,6 +32,9 @@ h1, h3 {
 }
 
 #addAlcohol {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 15px;
   padding: 15px;
   background-color: #383838;
@@ -51,6 +51,41 @@ h1, h3 {
   background-color: #828282;
 }
 
-table {
-  background-color: white;
+#alcoholList {
+  padding: 10px;
+}
+
+.row {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.alcoholBox {
+  color: black;
+  background-color: #cfcfcf;
+  padding: 5px;
+  border-radius: 15px;
+  margin: 5px 5px;
+}
+
+.trashIcon {
+  opacity: 0.6;
+}
+
+.trashIcon:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+#results {
+  display: none;
+}
+
+#invalidDataWarning {
+  display: none;
+}
+
+footer {
+  padding: 25px;
+  margin-top: 30px;
 }
