--- a/main.css
+++ b/main.css
@@ -103,6 +103,14 @@ footer {
   background-color: #383838;
 }
 
+#toggleTable {
+  margin-top: 10px;
+  font-weight: bold;
+  color: black;
+  border-color: #cfcfcf;
+  background-color: #cfcfcf;
+}
+
 #settings {
   padding: 10px;
   margin-top: 10px;
@@ -112,9 +120,24 @@ footer {
   background-color: #383838;
   border-radius: 15px;
   display: none;
-  -webkit-animation: fade-in 0.3s;
+  -webkit-animation: fade-in 0.4s;
 }
 
+#intoxicationTable {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  width: 85%;
+  border: none;
+  display: none;
+  animation: fade-in 0.4s;
+}
+
+#intoxicationTable table {
+  background-color:  #cfcfcf;
+  color: black;
+  border-radius: 15px;
+}
 @-webkit-keyframes fade-in {
   from { opacity: 0; }
   to: { opacity: 1; }
